--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@supabase/supabase-js": "^2.1.1",
+    "@tanstack/react-query": "^4.19.1",
     "bootstrap": "^5.2.2",
     "mdb-react-ui-kit": "^4.2.0",
     "next": "13.0.0",
