--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.1.1",
     "@tanstack/react-query": "^4.19.1",
     "bootstrap": "^5.2.2",
+    "formik": "^2.2.9",
     "mdb-react-ui-kit": "^4.2.0",
     "next": "13.0.0",
     "react": "18.2.0",
@@ -21,7 +22,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "sass": "^1.55.0",
-    "swiper": "^8.4.4"
+    "swiper": "^8.4.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.26.0",
