--- a/package.json
+++ b/package.json
@@ -10,26 +10,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "6.2.0",
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "@supabase/supabase-js": "2.1.1",
-    "@tanstack/react-query": "4.19.1",
-    "bootstrap": "5.2.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "formik": "2.2.9",
-    "mdb-react-ui-kit": "4.2.0",
+    "@tanstack/react-query": "^4.19.1",
+    "bootstrap": "^5.2.2",
+    "formik": "^2.2.9",
+    "mdb-react-ui-kit": "^4.2.0",
     "next": "13.0.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
-    "react-bootstrap": "2.5.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.6.0",
-    "sass": "1.55.0",
-    "swiper": "8.4.4",
-    "uuid": "9.0.0",
-    "yup": "0.32.11"
+    "react-icons": "^4.6.0",
+    "sass": "^1.55.0",
+    "swiper": "^8.4.4",
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "eslint": "8.26.0",
+    "eslint": "^8.26.0",
     "eslint-config-next": "^12.0.4"
   }
 }
