--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "react-images-uploading": "^3.1.7",
     "sass": "^1.55.0",
     "swiper": "^8.4.4",
     "uuid": "^9.0.0",
