--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
+    "@hookform/resolvers": "^2.9.10",
     "@supabase/supabase-js": "2.1.1",
     "@tanstack/react-query": "^4.19.1",
     "bootstrap": "^5.2.2",
@@ -21,6 +22,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.5",
     "react-icons": "^4.6.0",
     "react-images-uploading": "^3.1.7",
     "sass": "^1.55.0",
