--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "sass": "^1.55.0",
     "swiper": "^8.4.4",
     "uuid": "^9.0.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "^8.26.0",
