--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "zustand": "^4.2.0"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.0",
     "eslint": "^8.26.0",
     "eslint-config-next": "^12.0.4"
   }
