--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.41.5",
     "react-icons": "^4.6.0",
     "react-images-uploading": "^3.1.7",
+    "react-slick": "^0.29.0",
     "sass": "^1.55.0",
     "swiper": "^8.4.4",
     "uuid": "^9.0.0",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@hookform/devtools": "^4.3.0",
     "eslint": "^8.26.0",
-    "eslint-config-next": "^12.0.4"
+    "eslint-config-next": "^12.0.4",
+    "rome": "^11.0.0"
   }
 }
