--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-images-uploading": "^3.1.7",
     "react-slick": "^0.29.0",
     "sass": "^1.55.0",
+    "supabase": "^1.37.1",
     "swiper": "^8.4.4",
     "uuid": "^9.0.0",
     "yup": "^0.32.11",
