--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.0",
         "@hookform/resolvers": "^2.9.10",
-        "@next/swc-linux-x64-gnu": "^13.1.6",
         "@supabase/supabase-js": "2.1.1",
         "@tanstack/react-query": "^4.19.1",
         "bootstrap": "^5.2.2",
         "formik": "^2.2.9",
+        "libphonenumber-js": "^1.10.21",
         "mdb-react-ui-kit": "^4.2.0",
         "next": "^13.0.0",
         "prop-types": "15.8.1",
@@ -26,6 +26,7 @@
         "react-hook-form": "^7.41.5",
         "react-icons": "^4.6.0",
         "react-images-uploading": "^3.1.7",
+        "react-phone-input-2": "^2.15.1",
         "react-slick": "^0.29.0",
         "sass": "^1.55.0",
         "supabase": "^1.37.1",
