--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@hookform/resolvers": "^2.9.10",
         "@supabase/supabase-js": "2.1.1",
         "@tanstack/react-query": "^4.19.1",
+        "@next/swc-linux-x64-gnu": "^13.1.6",
         "bootstrap": "^5.2.2",
         "formik": "^2.2.9",
         "libphonenumber-js": "^1.10.21",
