--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     },
     "devDependencies": {
         "@hookform/devtools": "^4.3.0",
+        "@types/node": "18.14.6",
         "eslint": "^8.26.0",
         "eslint-config-next": "^12.0.4",
-        "rome": "^11.0.0"
+        "rome": "^11.0.0",
+        "typescript": "4.9.5"
     }
 }
