--- a/package.json
+++ b/package.json
@@ -10,16 +10,13 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.2.0",
         "@hookform/resolvers": "^2.9.10",
         "@next/swc-linux-x64-gnu": "^13.1.6",
         "@supabase/supabase-js": "2.1.1",
         "@tanstack/react-query": "^4.19.1",
         "bootstrap": "^5.2.2",
-        "formik": "^2.2.9",
         "libphonenumber-js": "^1.10.21",
-        "mdb-react-ui-kit": "^4.2.0",
-        "next": "^13.0.0",
+        "next": "13.0.0",
         "prop-types": "15.8.1",
         "react": "18.2.0",
         "react-bootstrap": "^2.5.0",
