--- a/package.json
+++ b/package.json
@@ -10,28 +10,28 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@hookform/resolvers": "^2.9.10",
-        "@next/swc-linux-x64-gnu": "^13.1.6",
+        "@hookform/resolvers": "2.9.10",
+        "@next/swc-linux-x64-gnu": "13.1.6",
         "@supabase/supabase-js": "2.1.1",
-        "@tanstack/react-query": "^4.19.1",
-        "bootstrap": "^5.2.2",
+        "@tanstack/react-query": "4.19.1",
+        "bootstrap": "5.2.2",
         "libphonenumber-js": "^1.10.21",
         "next": "13.0.0",
         "prop-types": "15.8.1",
         "react": "18.2.0",
-        "react-bootstrap": "^2.5.0",
+        "react-bootstrap": "2.5.0",
         "react-dom": "18.2.0",
-        "react-hook-form": "^7.41.5",
-        "react-icons": "^4.6.0",
-        "react-images-uploading": "^3.1.7",
-        "react-phone-input-2": "^2.15.1",
-        "react-slick": "^0.29.0",
-        "sass": "^1.55.0",
-        "supabase": "^1.37.1",
-        "swiper": "^8.4.4",
-        "uuid": "^9.0.0",
-        "yup": "^0.32.11",
-        "zustand": "^4.2.0"
+        "react-hook-form": "7.41.5",
+        "react-icons": "4.6.0",
+        "react-images-uploading": "3.1.7",
+        "react-phone-input-2": "2.15.1",
+        "react-slick": "0.29.0",
+        "sass": "1.55.0",
+        "supabase": "1.37.1",
+        "swiper": "8.4.4",
+        "uuid": "9.0.0",
+        "yup": "0.32.11",
+        "zustand": "4.2.0"
     },
     "devDependencies": {
         "@hookform/devtools": "^4.3.0",
