--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
         "react-bootstrap": "2.5.0",
         "react-dom": "18.2.0",
         "react-hook-form": "7.41.5",
-        "react-icons": "4.6.0",
-        "react-images-uploading": "3.1.7",
-        "react-phone-input-2": "2.15.1",
-        "react-slick": "0.29.0",
-        "sass": "1.55.0",
-        "supabase": "1.37.1",
-        "swiper": "8.4.4",
-        "uuid": "9.0.0",
-        "yup": "0.32.11",
-        "zustand": "4.2.0"
+        "react-icons": "^4.6.0",
+        "react-images-uploading": "^3.1.7",
+        "react-phone-input-2": "^2.15.1",
+        "react-slick": "^0.29.0",
+        "sass": "^1.55.0",
+        "supabase": "^1.37.1",
+        "swiper": "^8.4.4",
+        "uuid": "^9.0.0",
+        "yup": "^0.32.11",
+        "zustand": "^4.3.8"
     },
     "devDependencies": {
         "@hookform/devtools": "^4.3.0",
