--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react": "18.2.0",
         "react-bootstrap": "2.5.0",
         "react-dom": "18.2.0",
+        "react-facebook-pixel": "^1.0.4",
         "react-hook-form": "7.41.5",
         "react-icons": "^4.6.0",
         "react-images-uploading": "^3.1.7",
@@ -35,10 +36,10 @@
     },
     "devDependencies": {
         "@hookform/devtools": "^4.3.0",
-        "rome": "^12.1.2",
         "@types/node": "18.14.6",
         "eslint": "^8.26.0",
         "eslint-config-next": "^12.0.4",
+        "rome": "^12.1.2",
         "typescript": "4.9.5"
     }
 }
