--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "@supabase/supabase-js": "2.1.1",
         "@tanstack/react-query": "4.19.1",
         "bootstrap": "5.2.2",
-        "libphonenumber-js": "^1.10.21",
         "next": "13.0.0",
         "prop-types": "15.8.1",
         "react": "18.2.0",
@@ -25,7 +24,7 @@
         "react-hook-form": "7.41.5",
         "react-icons": "^4.6.0",
         "react-images-uploading": "^3.1.7",
-        "react-phone-input-2": "^2.15.1",
+        "react-phone-number-input": "^3.2.25",
         "react-slick": "^0.29.0",
         "sass": "^1.55.0",
         "supabase": "^1.37.1",
@@ -36,6 +35,7 @@
     },
     "devDependencies": {
         "@hookform/devtools": "^4.3.0",
+        "@pandacss/dev": "^0.5.1",
         "@types/node": "18.14.6",
         "eslint": "^8.26.0",
         "eslint-config-next": "^12.0.4",
