--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "swiper": "^8.4.4",
         "uuid": "^9.0.0",
         "yup": "^0.32.11",
-        "zustand": "^4.3.8"
+        "zustand": "^4.3.8",
+        "axios": "^1.6.2",
     },
     "devDependencies": {
         "@hookform/devtools": "^4.3.0",
