--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     },
     "dependencies": {
         "@hookform/resolvers": "2.9.10",
-        "@next/swc-linux-x64-gnu": "13.1.6",
         "@supabase/supabase-js": "2.1.1",
         "@tanstack/react-query": "4.19.1",
+        "axios": "^1.6.2",
         "bootstrap": "5.2.2",
         "next": "13.0.0",
         "prop-types": "15.8.1",
