--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-dom": "18.2.0",
         "react-facebook-pixel": "^1.0.4",
         "react-hook-form": "7.41.5",
+        "react-hot-toast": "^2.4.1",
         "react-icons": "^4.6.0",
         "react-images-uploading": "^3.1.7",
         "react-phone-number-input": "^3.2.25",
