--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@hookform/resolvers": "2.9.10",
         "@supabase/supabase-js": "2.1.1",
         "@tanstack/react-query": "4.19.1",
+        "@vercel/analytics": "^1.2.2",
         "axios": "^1.6.2",
         "bootstrap": "5.2.2",
         "next": "13.0.0",
