chore: Update dependencies in package.json

--- a/package.json
+++ b/package.json
@@ -1,46 +1,49 @@
 {
-    "name": "recycling",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "export": "next export",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@hookform/resolvers": "2.9.10",
-        "@supabase/supabase-js": "2.1.1",
-        "@tanstack/react-query": "4.19.1",
-        "@vercel/analytics": "^1.2.2",
-        "axios": "^1.6.2",
-        "bootstrap": "5.2.2",
-        "next": "13.0.0",
-        "prop-types": "15.8.1",
-        "react": "18.2.0",
-        "react-bootstrap": "2.5.0",
-        "react-dom": "18.2.0",
-        "react-facebook-pixel": "^1.0.4",
-        "react-hook-form": "7.41.5",
-        "react-hot-toast": "^2.4.1",
-        "react-icons": "^4.6.0",
-        "react-images-uploading": "^3.1.7",
-        "react-phone-number-input": "^3.2.25",
-        "react-slick": "^0.29.0",
-        "sass": "^1.55.0",
-        "supabase": "^1.37.1",
-        "swiper": "^8.4.4",
-        "uuid": "^9.0.0",
-        "yup": "^0.32.11",
-        "zustand": "^4.3.8"
-    },
-    "devDependencies": {
-        "@hookform/devtools": "^4.3.0",
-        "@types/node": "18.14.6",
-        "eslint": "^8.26.0",
-        "eslint-config-next": "^12.0.4",
-        "rome": "^12.1.2",
-        "typescript": "4.9.5"
-    }
+	"name": "recycling",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"export": "next export",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@biomejs/biome": "^1.8.3",
+		"@hookform/resolvers": "2.9.10",
+		"@supabase/supabase-js": "2.1.1",
+		"@tanstack/react-query": "^5.51.21",
+		"@vercel/analytics": "^1.2.2",
+		"axios": "^1.6.2",
+		"bootstrap": "5.2.2",
+		"next": "13.0.0",
+		"prop-types": "15.8.1",
+		"react": "18.2.0",
+		"react-bootstrap": "2.5.0",
+		"react-dom": "18.2.0",
+		"react-facebook-pixel": "^1.0.4",
+		"react-hook-form": "7.41.5",
+		"react-hot-toast": "^2.4.1",
+		"react-icons": "^4.6.0",
+		"react-images-uploading": "^3.1.7",
+		"react-phone-number-input": "^3.2.25",
+		"react-slick": "^0.29.0",
+		"sass": "^1.55.0",
+		"supabase": "^1.37.1",
+		"swiper": "^8.4.4",
+		"uuid": "^9.0.0",
+		"wretch": "^2.9.0",
+		"yup": "^0.32.11",
+		"zustand": "^4.3.8"
+	},
+	"devDependencies": {
+		"@hookform/devtools": "^4.3.0",
+		"@types/node": "18.14.6",
+		"eslint": "^8.26.0",
+		"eslint-config-next": "^12.0.4",
+		"rome": "^12.1.2",
+		"typescript": "4.9.5",
+		"@types/bun": "latest"
+	}
 }
