--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
 	},
 	"devDependencies": {
 		"@hookform/devtools": "^4.3.0",
+		"@types/bun": "latest",
 		"@types/node": "18.14.6",
 		"eslint": "^8.26.0",
 		"eslint-config-next": "^12.0.4",
-		"rome": "^12.1.2",
-		"typescript": "4.9.5",
-		"@types/bun": "latest"
+		"prettier": "3.3.3",
+		"typescript": "4.9.5"
 	}
 }
