--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"react-hot-toast": "^2.4.1",
 		"react-icons": "^4.6.0",
 		"react-images-uploading": "^3.1.7",
+		"react-infinite-scroll-component": "^6.1.0",
 		"react-phone-number-input": "^3.2.25",
 		"react-slick": "^0.29.0",
 		"sass": "^1.55.0",
