--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"supabase": "^1.37.1",
 		"swiper": "^8.4.4",
 		"uuid": "^9.0.0",
+		"wretch": "^2.9.0",
 		"yup": "^0.32.11",
 		"zustand": "^4.3.8"
 	},
